--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@
     background-color:#FF7F50;
     }
     .navbar img { max-width:100%;}
-/* ===============================================================================================================HEADER CSS CLOSED open */
+/* ===============================================================================================================HEADER CSS CLOSED*/
 /* ===============================================================================================================BUILDING SOFTWARE CSS START */
 .building-software { 
      padding:67px 0px 170px 0px;
